<resources>
    <string name="app_name">MireaProject</string>
    <string name="nav_header_title">NoOneBoss project</string>
    <string name="nav_header_subtitle">github.com/NoOneBoss</string>

    <string name="menu_home">Home</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_music">Music</string>
    <string name="menu_hardware">Hardware</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_stories">Stories</string>
    <string name="menu_webparser">Web parser</string>
    <string name="menu_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
</resources>