<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_browser"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_hardware"
            android:icon="@drawable/ic_menu_hardware"
            android:title="@string/menu_hardware" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/ic_menu_stories"
            android:title="@string/menu_stories" />
        <item
            android:id="@+id/nav_web_parser"
            android:icon="@drawable/ic_menu_webparser"
            android:title="@string/menu_webparser" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
    </group>
</menu>